# deepspeech-rs

./: .gitignore  .gitmodules  .travis.yml  Cargo.toml  LICENSE  README.md  ci.sh
.github/workflows/: deepspeech.yml
bg/: Cargo.toml
bg/src/: main.rs
dynbg/: Cargo.toml
dynbg/src/: main.rs
examples/: client.rs  client_extended.rs  client_simple.rs
script/: generate-bindings
src/: dynamic.rs  dynamic_bindings.rs  errors.rs  lib.rs
sys/: Cargo.toml  build.rs
sys/src/: bindings.rs  dynamic.rs  lib.rs
