[workspace]
members = ["sys", "bg"]

[package]
name = "deepspeech"
description = "Rust bindings to Mozilla's DeepSpeech STT implementation"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/deepspeech"
repository = "https://github.com/RustAudio/deepspeech-rs"
version = "0.6.1"
authors = ["est31 <MTest31@outlook.com>"]
readme = "README.md"

[dev-dependencies]
audrey = "0.2"

[dependencies]
libc = "0.2"
deepspeech-sys = { path = "sys" }
#deepspeech-sys = "0.6.1"
