[workspace]
members = ["sys", "bg", "dynbg"]

[package]
name = "deepspeech"
description = "Rust bindings to Mozilla's DeepSpeech STT implementation"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/deepspeech"
repository = "https://github.com/RustAudio/deepspeech-rs"
version = "0.7.0"
authors = ["est31 <MTest31@outlook.com>"]
readme = "README.md"

[dev-dependencies]
audrey = "0.2"

[dependencies]
libc = "0.2"
deepspeech-sys = { path = "sys", version = "0.7.0" }
libloading = {version = "0.6", optional = true}

[features]
default = []
dynamic = ["libloading", "deepspeech-sys/dynamic"]
no_static_bindings = []