[package]
name = "bg"
description = "Bindgen wrapper"
publish = false
license = "MPL-2.0"
repository = "https://github.com/RustAudio/deepspeech-rs"
version = "0.1.0"
authors = ["est31 <MTest31@outlook.com>"]

[dependencies]
bindgen = { version = "0.52", default-features = false, features = ["runtime"] }
proc-macro2 = { version = "1.0", default-features = false }
