[package]
name = "bg"
description = "Bindgen wrapper"
publish = false
license = "MIT OR Apache-2.0"
repository = "https://github.com/RustAudio/deepspeech-rs"
version = "0.1.0"
authors = ["est31 <MTest31@outlook.com>"]

[dependencies]
bindgen = { version = "0.57", default-features = false, features = ["runtime"] }
proc-macro2 = { version = "1.0", default-features = false }
syn = {version = "1.0.33", features = ["full", "extra-traits", "printing"]}
quote = "1"