[package]
name = "dynbg"
version = "0.1.0"
authors = ["Ilan Scheinkman"]
edition = "2018"

description = "Generates *unfinished* libloading-based wrapping code based on existing extern linking implementation."
publish = false
license = "MIT OR Apache-2.0"
repository = "https://github.com/RustAudio/deepspeech-rs"

[dependencies]
proc-macro2 = { version = "1.0", default-features = false }
syn = {version = "1.0.33", features = ["full", "extra-traits"]}