[package]
name = "deepspeech-sys"
description = "Bindgen output for the DeepSpeech C++ API"
license = "MPL-2.0"
documentation = "https://docs.rs/deepspeech-sys"
repository = "https://github.com/RustAudio/deepspeech-rs"
version = "0.7.0"
authors = ["est31 <MTest31@outlook.com>"]

include = ["deepspeech/native_client/deepspeech.h", "/src/**",
	"/build.rs", "/LICENSE", "Cargo.toml"]

[features]
default = []
dynamic = ["libloading"]
no_static_bindings = []

[dependencies]
libloading = {version = "0.6", optional = true}